--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1024,6 +1024,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         return;
     }
 
+
     // Check if in edit mode via URL parameters
     const urlParams = new URLSearchParams(window.location.search);
     const editTitle = urlParams.get("editTitle");
@@ -1031,6 +1032,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
     let editTask = null;
     if (editTitle && editDate) {
+        // Fetch all tasks from server and find the matching task
         try {
             const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(currentAdmin)}`, {
                 method: "GET",
@@ -1038,6 +1040,7 @@ document.addEventListener("DOMContentLoaded", async () => {
             });
             const data = await response.json();
             if (response.ok && data.tasks) {
+                // Find task by title and date (date matches start date of range)
                 editTask = data.tasks.find(task => task.title === editTitle && task.date.startsWith(editDate));
                 if (!editTask) {
                     console.error(`Task not found: title=${editTitle}, date=${editDate}`);
@@ -1051,7 +1054,9 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 
     if (editTask) {
-        editTaskFullDate = editTask.date;
+        // Set the full date range for the PUT request
+        editTaskFullDate = editTask.date; // Assign value here
+        // Populate form for editing
         document.getElementById("taskTitle").value = editTask.title || "";
         document.getElementById("taskNotes").value = editTask.notes || "";
         if (editTask.room) {
@@ -1068,6 +1073,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("RewardValue").value = editTask.reward || "";
         document.getElementById("selectReward").textContent = editTask.reward ? `Buzz Points: ${editTask.reward} 🍯` : "Reward";
 
+        // Handle times per day/week/month
         document.getElementById("timesPerDayInput").value = editTask.timesPerDay || "1";
         document.getElementById("timesPerWeekInput").value = editTask.timesPerWeek || "1";
         document.getElementById("timesPerMonthInput").value = editTask.timesPerMonth || "1";
@@ -1075,6 +1081,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("timesPerWeekGroup").style.display = editTask.repeat === "Weekly" ? "flex" : "none";
         document.getElementById("timesPerMonthGroup").style.display = editTask.repeat === "Monthly" ? "flex" : "none";
 
+        // Handle date mode
         if (editTask.specificDates) {
             document.getElementById("dateModeSelection").value = "specific-dates";
             document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
@@ -1123,16 +1130,45 @@ document.addEventListener("DOMContentLoaded", async () => {
             updateSelectedDaysDisplay();
         }
 
-        // Initialize selectedUsers before populating user list
-        selectedUsers = editTask.users ? editTask.users.map(u => u.trim()).filter(u => u) : [];
-        assignedToSelection.value = selectedUsers.join(", ");
-        updateSelectedUsersDisplay();
-        populateUsers();
+        if (editTask.users) {
+            selectedUsers = [...editTask.users].map(u => u.trim()).filter(u => u);
+            updateSelectedUsersDisplay();
+            populateUsers();
+        }
+
+        if (editTask.alarms?.length) {
+            alarms = [...editTask.alarms];
+            alarms.forEach((time) => {
+                const alarmWrapper = document.createElement("div");
+                alarmWrapper.style.marginBottom = "10px";
+                alarmWrapper.style.display = "flex";
+                alarmWrapper.style.alignItems = "center";
+                const alarmInput = document.createElement("input");
+                alarmInput.type = "time";
+                alarmInput.value = time;
+                alarmInput.style.marginRight = "10px";
+                alarmInput.style.padding = "10px";
+                alarmInput.style.border = "2px solid var(--primary-color)";
+                alarmInput.style.borderRadius = "8px";
+                alarmInput.style.background = "var(--accent-color)";
+                const removeButton = document.createElement("button");
+                removeButton.textContent = "Remove";
+                removeButton.style.padding = "5px 10px";
+                removeButton.style.backgroundColor = "var(--danger-color)";
+                removeButton.style.color = "var(--accent-color)";
+                removeButton.style.border = "none";
+                removeButton.style.borderRadius = "8px";
+                removeButton.addEventListener("click", () => {
+                    alarmWrapper.remove();
+                    alarms = alarms.filter((a) => a !== time);
+                });
+                alarmWrapper.appendChild(alarmInput);
+                alarmWrapper.appendChild(removeButton);
+                alarmContainer.appendChild(alarmWrapper);
+            });
+        }
     } else {
         // Initialize form for new task
-        selectedUsers = [];
-        assignedToSelection.value = "";
-        updateSelectedUsersDisplay();
         populateUsers();
         document.getElementById("dateModeSelection").value = "date";
         document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
@@ -1142,6 +1178,8 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("specificDaysGroup").style.display = "block";
     }
 });
+
+
 
 
 
@@ -1208,6 +1246,16 @@ document.addEventListener("DOMContentLoaded", async () => {
     
         let selectedUsers = [];
 
+        // Try to prefill selectedUsers if editing a task
+const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
+if (editTask && editTask.users && editTask.users.length > 0) {
+  selectedUsers = editTask.users;
+  localStorage.setItem("currentUser", selectedUsers[0]);
+}
+
+
+
+
 
 
 
@@ -1226,14 +1274,18 @@ document.addEventListener("DOMContentLoaded", async () => {
         });
 
         const data = await response.json();
+        console.log("Fetched users:", data); // Debug log
+
         if (!response.ok || !data.success) {
             throw new Error(data.message || `HTTP ${response.status}`);
         }
 
         const { users = [], permissions = {} } = data;
+
+        // Use all users (no filtering for Admin)
         const allUsers = users;
 
-        // Update localStorage
+        // Update localStorage to sync with backend
         const allUserData = JSON.parse(localStorage.getItem("userData") || "{}");
         allUserData[currentAdmin] = allUserData[currentAdmin] || { users: [], permissions: {} };
         allUserData[currentAdmin].users = allUsers;
@@ -1246,7 +1298,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         // Populate user list
         allUsers.forEach(user => {
             const userItem = document.createElement("li");
-            userItem.textContent = user;
+            userItem.textContent = user; // Display only the user email
             userItem.style.padding = "10px";
             userItem.style.margin = "5px 0";
             userItem.style.border = "1px solid var(--selection-border)";
@@ -1254,7 +1306,6 @@ document.addEventListener("DOMContentLoaded", async () => {
             userItem.style.cursor = "pointer";
             userItem.style.textAlign = "center";
 
-            // Set initial style based on selectedUsers
             if (selectedUsers.includes(user)) {
                 userItem.style.backgroundColor = "var(--primary-color)";
                 userItem.style.color = "var(--secondary-color)";
@@ -1291,14 +1342,17 @@ document.addEventListener("DOMContentLoaded", async () => {
             userList.appendChild(userItem);
         });
 
-        // Ensure display is updated after populating
+        // Update display
         updateSelectedUsersDisplay();
+        assignedToDisplay.textContent = allUsers.length ? "Select users" : "No users available";
 
     } catch (error) {
         console.error("Error fetching users:", error);
         assignedToDisplay.textContent = "Error loading users";
     }
 }
+
+
 
 
 
