--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -2126,7 +2126,13 @@ window.addEventListener("click", (e) => {
     const editTitle = urlParams.get("editTitle");
     const editDate = urlParams.get("editDate");
     const from = urlParams.get("from");
-    const originalUser = urlParams.get("user") || localStorage.getItem("currentUser") || users[0];
+    const originalUser = urlParams.get("user") || localStorage.getItem("currentUser");
+
+    if (!originalUser) {
+        alert("No user context available. Redirecting to user selection.");
+        window.location.href = "/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html";
+        return;
+    }
 
     try {
         const url = "https://beemazing.onrender.com/api/tasks";
@@ -2185,7 +2191,7 @@ function handleCancel() {
     const urlParams = new URLSearchParams(window.location.search);
     const from = urlParams.get("from");
     const adminEmail = encodeURIComponent(localStorage.getItem("currentAdminEmail") || "");
-    const originalUser = urlParams.get("user") || localStorage.getItem("currentUser") || "";
+    const originalUser = urlParams.get("user") || localStorage.getItem("currentUser");
 
     if (from === "onboarding") {
         window.location.href = `/BeeMazing-Y1/onboarding.html?admin=${adminEmail}&user=${encodeURIComponent(originalUser)}#step4`;
@@ -2196,6 +2202,11 @@ function handleCancel() {
         window.location.href = "/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html";
     }
 }
+
+
+
+
+
 
 
 
