--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -2462,19 +2462,18 @@ overdueCard.addEventListener("click", () => {
 
 
 
-
 async function loadPendingTasks() {
   const adminEmail = localStorage.getItem("currentAdminEmail");
   const pendingContainer = document.getElementById("pendingTasks");
   pendingContainer.innerHTML = "<p>Loading...</p>";
 
   try {
-    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
     const data = await res.json();
     if (!res.ok) throw new Error(data.error || "Failed to load tasks");
 
     const allTasks = data.tasks || [];
-    const todayStr = selectedDate;
+    const todayStr = new Date().toLocaleDateString("sv-SE");
 
     const pendingTasks = allTasks.filter(task => {
       if (!task || !task.users || !task.title || !task.date) return false;
@@ -2482,13 +2481,12 @@ async function loadPendingTasks() {
 
       let turnData;
       if (task.settings?.includes("Rotation")) {
-        turnData = typeof mixedTurnData === "function" ? mixedTurnData(task, todayStr) : null;
-      } else if (task.settings?.includes("Individual")) {
-        turnData = typeof individualTurnData === "function" ? individualTurnData(task, todayStr) : null;
+        turnData = typeof mixedTurnData === "function" ? mixedTurnData(task, todayStr) : { turns: [] };
+      } else {
+        turnData = typeof individualTurnData === "function" ? individualTurnData(task, todayStr) : { turns: [] };
       }
       if (!turnData) return false;
 
-      // Only include tasks with pending turns where user hasn't completed all required times
       const requiredTimes = task.timesPerDay || 1;
       return turnData.turns.some(turn => {
         const userCompletions = turnData.turns.filter(t => t.user === turn.user && t.isCompleted).length;
@@ -2520,8 +2518,8 @@ async function loadPendingTasks() {
               <div class="task-title">${task.title}</div>
               <div class="task-info">Submitted by: ${turn.user} (Attempt ${turn.repetition})</div>
               <div class="task-actions">
-                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
-                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${turn.index}, 'accept', '${turn.user}', ${turn.repetition}, event)">Accept</button>
+                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${turn.index}, 'decline', '${turn.user}', ${turn.repetition}, event)">Decline</button>
               </div>
             `;
             pendingContainer.appendChild(div);
@@ -2536,6 +2534,56 @@ async function loadPendingTasks() {
 }
 
 
+
+
+
+
+async function handleDecision(title, date, selectedDate, index, decision, user, repetition, event) {
+  event.preventDefault();
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  const button = event.target;
+  button.disabled = true;
+
+  try {
+    const response = await fetch("https://beemazing.onrender.com/api/review-task", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        adminEmail,
+        title,
+        date,
+        selectedDate,
+        user,
+        decision,
+        index,
+        repetition
+      })
+    });
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || `HTTP error ${response.status}`);
+
+    // Show success popup
+    const popup = document.createElement("div");
+    popup.className = "reward-popup";
+    popup.textContent = `Task ${decision}d successfully!`;
+    document.body.appendChild(popup);
+    setTimeout(() => popup.remove(), 2000);
+
+    // Reload pending tasks to reflect changes
+    await loadPendingTasks();
+  } catch (err) {
+    console.error(`Error ${decision}ing task:`, err);
+    const popup = document.createElement("div");
+    popup.className = "reward-popup";
+    popup.textContent = `Error: ${err.message}`;
+    popup.style.color = "red";
+    document.body.appendChild(popup);
+    setTimeout(() => {
+      popup.remove();
+      button.disabled = false;
+    }, 3000);
+  }
+}
 
 
 
