--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -2461,78 +2461,57 @@ overdueCard.addEventListener("click", () => {
 
 
 
-
 async function loadPendingTasks() {
   const adminEmail = localStorage.getItem("currentAdminEmail");
   const pendingContainer = document.getElementById("pendingTasks");
   pendingContainer.innerHTML = "<p>Loading...</p>";
 
+  console.log("🔍 loadPendingTasks: Fetching pending tasks", { adminEmail });
+
   try {
     const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
     const data = await res.json();
-    if (!res.ok) throw new Error(data.error || "Failed to load tasks");
+    if (!res.ok) {
+      throw new Error(data.error || "Failed to load tasks");
+    }
 
     const allTasks = data.tasks || [];
     const todayStr = new Date().toLocaleDateString("sv-SE");
+    console.log("🔍 loadPendingTasks: Fetched tasks", allTasks.map(t => ({ title: t.title, date: t.date, pendingCompletions: t.pendingCompletions?.[todayStr] })));
 
     const pendingTasks = allTasks.filter(task => {
-      if (!task || !task.users || !task.title || !task.date) return false;
-      if (!filterTasksForDate([task], todayStr).length) return false;
-
-      let turnData;
-      if (task.settings?.includes("Rotation")) {
-        turnData = typeof mixedTurnData === "function" ? mixedTurnData(task, todayStr) : { turns: [] };
-      } else {
-        turnData = typeof individualTurnData === "function" ? individualTurnData(task, todayStr) : { turns: [] };
-      }
-      if (!turnData) return false;
-
-      const requiredTimes = task.timesPerDay || 1;
-      return turnData.turns.some(turn => {
-        const userCompletions = turnData.turns.filter(t => t.user === turn.user && t.isCompleted).length;
-        return turn.isPending && !turn.isCompleted && userCompletions < requiredTimes;
-      });
+      if (!task || !task.pendingCompletions || !task.pendingCompletions[todayStr]) return false;
+      return task.pendingCompletions[todayStr].length > 0;
     });
 
     document.getElementById("approvalCount").textContent = `(${pendingTasks.length})`;
+    console.log("🔍 loadPendingTasks: Filtered pending tasks", pendingTasks.map(t => ({ title: t.title, pending: t.pendingCompletions[todayStr] })));
 
     if (pendingTasks.length === 0) {
       pendingContainer.innerHTML = "<p>No tasks needing approval 🎉</p>";
     } else {
       pendingContainer.innerHTML = "";
       pendingTasks.forEach(task => {
-        let turnData;
-        if (task.settings?.includes("Rotation")) {
-          turnData = typeof mixedTurnData === "function" ? mixedTurnData(task, todayStr) : { turns: [] };
-        } else {
-          turnData = typeof individualTurnData === "function" ? individualTurnData(task, todayStr) : { turns: [] };
-        }
-
-        const requiredTimes = task.timesPerDay || 1;
-        turnData.turns.filter(turn => turn.isPending && !turn.isCompleted).forEach(turn => {
-          const userCompletions = turnData.turns.filter(t => t.user === turn.user && t.isCompleted).length;
-          if (userCompletions < requiredTimes) {
-            const div = document.createElement("div");
-            div.className = "pending-task";
-            div.innerHTML = `
-              <div class="task-title">${task.title}</div>
-              <div class="task-info">Submitted by: ${turn.user} (Attempt ${turn.repetition})</div>
-              <div class="task-actions">
-                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${turn.index}, 'accept', '${turn.user}', ${turn.repetition}, event)">Accept</button>
-                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${turn.index}, 'decline', '${turn.user}', ${turn.repetition}, event)">Decline</button>
-              </div>
-            `;
-            pendingContainer.appendChild(div);
-          }
+        task.pendingCompletions[todayStr].forEach((pending, index) => {
+          const div = document.createElement("div");
+          div.className = "pending-task";
+          div.innerHTML = `
+            <div class="task-title">${task.title}</div>
+            <div class="task-info">Submitted by: ${pending.user} (Attempt ${pending.repetition})</div>
+            <div class="task-actions">
+              <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${index}, 'accept', '${pending.user}', ${pending.repetition}, event)">Accept</button>
+              <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', '${todayStr}', ${index}, 'decline', '${pending.user}', ${pending.repetition}, event)">Decline</button>
+            </div>
+          `;
+          pendingContainer.appendChild(div);
         });
       });
     }
   } catch (err) {
-    console.error("Error loading pending tasks:", err);
+    console.error("🔥 loadPendingTasks: Error", err);
     pendingContainer.innerHTML = "<p>Error loading pending tasks</p>";
   }
 }
-
 
 
 
@@ -2544,35 +2523,30 @@ async function handleDecision(title, date, selectedDate, index, decision, user, 
   const button = event.target;
   button.disabled = true;
 
+  console.log("🔍 handleDecision: Processing", { title, date, selectedDate, index, decision, user, repetition, adminEmail });
+
   try {
     const response = await fetch("https://beemazing.onrender.com/api/review-task", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        adminEmail,
-        title,
-        date,
-        selectedDate,
-        user,
-        decision,
-        index,
-        repetition
-      })
+      body: JSON.stringify({ adminEmail, title, date, selectedDate, user, decision, index, repetition })
     });
     const data = await response.json();
-    if (!response.ok) throw new Error(data.error || `HTTP error ${response.status}`);
+    if (!response.ok) {
+      throw new Error(data.error || `HTTP error ${response.status}`);
+    }
 
-    // Show success popup
+    console.log("✅ handleDecision: Success", data);
     const popup = document.createElement("div");
     popup.className = "reward-popup";
     popup.textContent = `Task ${decision}d successfully!`;
     document.body.appendChild(popup);
-    setTimeout(() => popup.remove(), 2000);
-
-    // Reload pending tasks to reflect changes
-    await loadPendingTasks();
+    setTimeout(() => {
+      popup.remove();
+      loadPendingTasks(); // Refresh pending tasks
+    }, 2000);
   } catch (err) {
-    console.error(`Error ${decision}ing task:`, err);
+    console.error("🔥 handleDecision: Error", err);
     const popup = document.createElement("div");
     popup.className = "reward-popup";
     popup.textContent = `Error: ${err.message}`;
@@ -2584,6 +2558,7 @@ async function handleDecision(title, date, selectedDate, index, decision, user, 
     }, 3000);
   }
 }
+
 
 
 
